# ruff

crates/ruff/src/: codes.rs  lib_wasm.rs  linter.rs  noqa.rs  registry.rs
crates/ruff/src/ast/: helpers.rs  whitespace.rs
crates/ruff/src/autofix/: helpers.rs  mod.rs
crates/ruff/src/checkers/: logical_lines.rs  noqa.rs  tokens.rs
crates/ruff/src/checkers/ast/: mod.rs
crates/ruff/src/rules/eradicate/: rules.rs
crates/ruff/src/rules/flake8_2020/: rules.rs
crates/ruff/src/rules/flake8_annotations/: fixes.rs  rules.rs
crates/ruff/src/rules/flake8_blind_except/: rules.rs
crates/ruff/src/rules/flake8_boolean_trap/: rules.rs
crates/ruff/src/rules/flake8_builtins/: rules.rs
crates/ruff/src/rules/flake8_comprehensions/: fixes.rs
crates/ruff/src/rules/flake8_debugger/: rules.rs
crates/ruff/src/rules/flake8_errmsg/: rules.rs
crates/ruff/src/rules/flake8_implicit_str_concat/: rules.rs
crates/ruff/src/rules/flake8_import_conventions/: rules.rs
crates/ruff_cli/src/: printer.rs
crates/ruff_linter/: Cargo.toml
crates/ruff_linter/src/: diagnostic.rs  lib.rs  range.rs
crates/ruff_linter_eradicate/: Cargo.toml
crates/ruff_linter_eradicate/src/: lib.rs  rules.rs
crates/ruff_macros/src/: define_violation.rs
crates/ruff_python_ast/: Cargo.toml
crates/ruff_python_ast/src/source_code/: locator.rs  mod.rs  stylist.rs
crates/ruff_python_formatter/src/: cst.rs  parentheses.rs
crates/ruff_python_formatter/src/cst/: mod.rs
crates/ruff_python_formatter/src/format/: expr.rs  strings.rs
crates/ruff_wasm/src/: lib.rs
(+226 files in other folders)
