[package]
name = "ruff_linter_eradicate"
version = "0.0.0"
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ruff_linter = { path = "../ruff_linter" }
ruff_macros = { path = "../ruff_macros" }
ruff_python_ast = { path = "../ruff_python_ast" }

regex = { workspace = true }
once_cell = { workspace = true }
rustpython-common = { workspace = true }
rustpython-parser = { workspace = true }
